# leonardo_toolset_revision

./: .bumpversion.cfg  .flake8  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  setup.py_old  tox.ini
.github/workflows/: build-main.yml  build-main.yml.old  test-and-lint.yml  test_and_deploy.yml  test_on_pr.yml
docs/: Makefile  api.rst  conf.py  destripe.rst  fuse_det.rst  fuse_illu.rst  index.rst  installation.rst  make.bat  requirements.txt  tutorials.rst
docs/tutorials/notebook/: Leonardo_DeStripe.ipynb  Leonardo_DeStripe_Fuse.ipynb  Leonardo_Fuse_(along_detection).ipynb  Leonardo_Fuse_(along_illumination).ipynb
leonardo/: __init__.py  workflows.py
leonardo/tests/: __init__.py  test_function.py
leonardo_toolset/: __init__.py
leonardo_toolset/destripe/: __init__.py  constant.py  core.py  guided_filter_upsample.py  loss_term_jax.py  loss_term_torch.py  network_jax.py  network_torch.py  post_processing.py  utils.py  utils_jax.py  utils_torch.py  wave_rec.py
leonardo_toolset/fusion/: NSCT.py  __init__.py  blobs_dog.py  fuse_det.py  fuse_illu.py  utils.py
leonardo_toolset/fusion/templates/: fuse_2_det.yaml  fuse_2_high_res_det.yaml  fuse_4_det.yaml  fuse_illu.yaml
leonardo_toolset/tests/: __init__.py
